apps/base/changedetection-io/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: changedetection
  name: changedetection
