apps/base/changedetection-io/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: changedetection
spec:
  selector:
    matchLabels:
      app: changedetection-io
  serviceName: changedetection
  replicas: 1 # do not increase
  template:
    metadata:
      labels:
        app: changedetection-io
    spec:
      containers:
        - name: changedetection
          image: ghcr.io/dgtlmoon/changedetection.io:0.45.1
          ports:
            - containerPort: 5000
              name: web
          volumeMounts:
            - name: data
              mountPath: /datastore
        - name: playwright-chrome
          image: browserless/chrome:1.53-chrome-stable
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: dshm
          emptyDir:
            sizeLimit: 2Gi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
