apps/base/changedetection-io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
spec:
  selector:
    app: changedetection-io
  ports:
    - port: 80
      targetPort: 5000
